# stackshield

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  ssx.sh
.projd/progress/: certs-cli-orchestration.json  certs-ct-service.json  certs-dockerfile.json  certs-docs.json  ui-cert-visualization.json
apps/certs/: README.md  certs.py
apps/db_query/: README.md  query.py
apps/dns_discovery/: README.md  dns.py
apps/port_scan/: README.md  port.py
apps/web/: server.py
apps/web/routers/: pipelines.py  scans.py  targets.py  tool_execution.py
apps/web/services/: pipeline_runner.py  tool_runner.py
lib/certs/services/: ct_service.py  tls_service.py
lib/common/db/: __init__.py  base.py  sqlite_store.py
lib/common/entities/: __init__.py  cert_info.py  dns_records.py  domain.py  port_result.py  subdomain.py  whois_info.py
lib/dns_discovery/services/: asn_service.py  dns_service.py  subdomain_service.py  whois_service.py
lib/port_scan/services/: naabu_service.py
rules/: docker.md  general.md  python.md
tests/: test_db_store.py  test_pipeline_runner.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: CommandPalette.tsx  Layout.tsx  Sidebar.tsx
web/src/components/pipeline/: ParamPanel.tsx  PipelineManager.tsx  ToolNode.tsx  types.ts  (+3 more)
web/src/pages/: Dashboard.tsx  History.tsx  NewScan.tsx  PipelineResults.tsx  Pipelines.tsx  ScanDetail.tsx  ScanHistory.tsx  ScanResults.tsx  TargetDetail.tsx  Targets.tsx
(+8 files in other folders)
