[project]
name = "stackshield"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "tomli>=2.0; python_version < '3.11'",
    "typing_extensions>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
